# toodoo

./: .gitattributes  .gitignore  .prettierignore  CLAUDE.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  toodoo-build-plan.md  vitest.config.ts
docs/: adversarial-review-findings.md  decisions.md  feature-inventory.md  manual-test-checklist.md  phase-12-plan.md  pre-launch.md  updater.md
e2e/: panes.spec.ts  perf.spec.ts  phase1.spec.ts  phase10.spec.ts  phase11.spec.ts  phase12a.spec.ts  phase12b.spec.ts  phase12c.spec.ts  phase12d.spec.ts  phase12e.spec.ts  phase3.spec.ts  phase4.spec.ts  phase5.spec.ts  phase6.spec.ts  phase7.spec.ts  phase8.spec.ts  phase9.spec.ts  smoke.spec.ts
mcp/: README.md  toodoo-mcp.mjs
scripts/: gen-ambient.mjs  gen-chirp.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_tasks_fts_inbox.sql  0003_recurrence_reminders.sql  0004_filter_color.sql  0005_cal_events_extra.sql  0006_focus_planned.sql  0007_search_habits_tags.sql  0008_completion_idempotency.sql  0009_reminder_dispatch.sql  0010_habit_goal_days.sql  0011_attachments.sql
src-tauri/src/: deeplink.rs  desktop.rs  error.rs  events.rs  lib.rs  toast_actions.rs
src-tauri/src/api/: auth.rs  dto.rs  mod.rs  routes.rs  tests.rs
src-tauri/src/repo/: activity.rs  attachments.rs  backup.rs  cal_subscriptions.rs  calendar.rs  check_items.rs  comments.rs  countdowns.rs  db.rs  exporters.rs  filter_rule.rs  filters.rs  focus.rs  folders.rs  habits.rs  ics.rs  importers.rs  matrix.rs  mod.rs  projects.rs  query.rs  recurrence.rs  reminders.rs  saved_searches.rs  search.rs  sections.rs  seed.rs  settings.rs  stats.rs  sticky_notes.rs  tags.rs  tasks.rs  templates.rs
(+192 files in other folders)
